--- a/src/app/reptile-details/reptile-details.page.html
+++ b/src/app/reptile-details/reptile-details.page.html
@@ -64,23 +64,24 @@
       <ion-item (click)="this.observations = !this.observations">
         <h2>Observations</h2>
       </ion-item>
-      <ion-item *ngIf="observations" id="InfoSort">
-        <ion-grid>
-          <ion-row *ngIf="observations.O_Date != null">Name: {{observations.O_Date}}</ion-row>
-          <ion-row *ngIf="observations.Observation != null">Date: {{observations.Observation}}</ion-row>
-          <ion-row *ngIf="(observations.O_Date == null) && (observations.Observation == null)">No information is currently avaliable</ion-row>
+      <ion-virtual-scroll *ngIf="observations" id="InfoSort" [items]="observationInfo">
+        <ion-grid *virtualItem="let item">
+          <ion-row *ngIf="(item.Observation != null) && (item.O_Date != null)" id="InfoSort">
+            <ion-row><p>{{item.O_Date}}   {{item.Observation}}</p></ion-row>
+          </ion-row>
         </ion-grid>
-      </ion-item>
+      </ion-virtual-scroll>
+      <ion-row *ngIf="(observationInfo.length == 0) && observations">No information is currently avaliable</ion-row>
 
       <ion-item (click)="this.feedSchedInfo = !this.feedSchedInfo">
         <h2>Feed Schedule</h2>
       </ion-item>
       <ion-item *ngIf="feedSchedInfo" id="InfoSort">
         <ion-grid>
-          <ion-row *ngIf="feedSchedInfo.F_Date != null">Date: {{feedSchedInfo.F_Date}}</ion-row>
-          <ion-row *ngIf="feedSchedInfo.Food != null">Food: {{feedSchedInfo.Food}}</ion-row>
-          <ion-row *ngIf="feedSchedInfo.Comment != null">Comment: {{feedSchedInfo.Comment}}</ion-row>
-          <ion-row *ngIf="(feedSchedInfo.F_Date == null) && (feedSchedInfo.Food == null) && (feedSchedInfo.Comment == null)">No information is currently avaliable</ion-row>
+          <ion-row *ngIf="feedSchedule.F_Date != null">Date: {{feedSchedule.F_Date}}</ion-row>
+          <ion-row *ngIf="feedSchedule.Food != null">Food: {{feedSchedule.Food}}</ion-row>
+          <ion-row *ngIf="feedSchedule.Comment != null">Comment: {{feedSchedule.Comment}}</ion-row>
+          <ion-row *ngIf="(feedSchedule.F_Date == null) && (feedSchedule.Food == null) && (feedSchedule.Comment == null)">No information is currently avaliable</ion-row>
         </ion-grid>
       </ion-item>
 
@@ -89,10 +90,10 @@
       </ion-item>
       <ion-item *ngIf="medication">
         <ion-grid>
-          <ion-row *ngIf="medication.RxDate != null">Date: {{medication.RxDate}}</ion-row>
-          <ion-row *ngIf="medication.Rx != null">Rx: {{medication.Rx}}</ion-row>
-          <ion-row *ngIf="medication.NextRx != null">NextRx: {{medication.NextRx}}</ion-row>
-          <ion-row *ngIf="(medication.RxDate == null) && (medication.Rx == null) && (medication.NextRx == null)">No information is currently avaliable</ion-row>
+          <ion-row *ngIf="medsInfo.RxDate != null">Date: {{medsInfo.RxDate}}</ion-row>
+          <ion-row *ngIf="medsInfo.Rx != null">Rx: {{medsInfo.Rx}}</ion-row>
+          <ion-row *ngIf="medsInfo.NextRx != null">NextRx: {{medsInfo.NextRx}}</ion-row>
+          <ion-row *ngIf="(medsInfo.RxDate == null) && (medsInfo.Rx == null) && (medsInfo.NextRx == null)">No information is currently avaliable</ion-row>
         </ion-grid>
       </ion-item>
 
