--- a/src/app/add-reptile-modal/add-reptile-modal.page.html
+++ b/src/app/add-reptile-modal/add-reptile-modal.page.html
@@ -6,11 +6,11 @@
 </ion-header>
   
   <ion-content padding>
-    <form (ngSubmit)="logForm()">
+    <form>
       <h2>Basic Information</h2>
       <ion-item>
         <ion-label>Name: </ion-label>
-        <ion-input type="text" name="name" id="name"></ion-input>
+        <ion-input type="text" name="name"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label>Location: </ion-label>
