--- a/src/app/add-reptile-modal/add-reptile-modal.page.html
+++ b/src/app/add-reptile-modal/add-reptile-modal.page.html
@@ -6,6 +6,7 @@
 </ion-header>
   
   <ion-content padding>
+    <p>This section just needs the inputed data sent to the database</p>
     <form>
       <h2>Basic Information</h2>
       <ion-item>
@@ -109,6 +110,20 @@
       <ion-item>
         <ion-label>Comment: </ion-label>
         <ion-input type="text" name="schedComment"></ion-input>
+      </ion-item>
+
+      <h2>Medications</h2>
+      <ion-item>
+        <ion-label>Last Dose: </ion-label>
+        <ion-input type="date" name="rxDate"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>Rx: </ion-label>
+        <ion-input type="text" name="rx"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>Next Dose: </ion-label>
+        <ion-input type="text" name="nextRx"></ion-input>
       </ion-item>
     </form>
     <ion-button type="submit" (click)="sendForm()"><ion-label>Submit</ion-label></ion-button>
