--- a/src/app/authentication/authentication.page.html
+++ b/src/app/authentication/authentication.page.html
@@ -8,6 +8,7 @@
 </ion-header>
 
 <ion-content padding>
+  <p>This section needs to run through a username and password verification</p>
     <ion-card>
       <ion-card-header>
         Login
