--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -28,17 +28,7 @@
       </ion-item>
       <ion-item *ngIf="reptileFeed == !reptilesFeed">
         <ul>
-          <li><h2>Content is blank so far</h2></li>
-        </ul>
-      </ion-item>
-      <ion-item (click)="this.reptilesUpdate = !this.reptilesUpdate">
-        <h2>Update a Reptile</h2>
-      </ion-item>
-      <ion-item *ngIf="reptilesUpdate == !reptilesUpdate">
-        <ul>
-          <li><h2>Add a Reptile</h2></li>
-          <li><h2>Remove a Reptile</h2></li>
-          <li><h2>Update a Reptile</h2></li>
+          <li (click)="presentFeedingModal()"><h2>Content is blank so far</h2></li>
         </ul>
       </ion-item>
     </ion-card-content>
