--- a/src/app/authentication/authentication.page.html
+++ b/src/app/authentication/authentication.page.html
@@ -16,6 +16,7 @@
   </ion-header>
 
 <ion-content padding>
+    <img src = "../../assets/img/SnakeHausLogo.png">
     <ion-card>
       <ion-card-header>
         Login
