Added password feild, populated dates
Changed the text feild on the authenticaion page to a password feild to hide the password and show as dots.

Populated the schedule page with today's and tomorrow's dates for feeding. *Was previously populated with placeholder data.

--- a/src/app/add-reptile-modal/add-reptile-modal.page.html
+++ b/src/app/add-reptile-modal/add-reptile-modal.page.html
@@ -8,7 +8,7 @@
   <ion-content padding>
     <p>This section just needs the inputed data sent to the database</p>
     <form>
-      <h2>Basic Information</h2>
+      <h2 color="secondary">Basic Information</h2>
       <ion-item>
         <ion-label>Name: </ion-label>
         <ion-input type="text" name="name"></ion-input>
@@ -63,7 +63,7 @@
       </ion-item>
       <ion-item>
         <ion-label>Picture: </ion-label>
-        <ion-input type="image" name="picture"></ion-input>
+        <ion-input type="image" name="picture" placeholder="Picture.jpg"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label>Active:</ion-label>
