--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -28,7 +28,7 @@
       </ion-item>
       <ion-item *ngIf="reptileFeed == !reptilesFeed">
         <ul>
-          <li (click)="presentFeedingModal()"><h2>Content is blank so far</h2></li>
+          <li (click)="presentFeedingModal()"><h2>Master Feeding Schedule</h2></li>
         </ul>
       </ion-item>
     </ion-card-content>
