--- a/src/app/authentication/authentication.page.html
+++ b/src/app/authentication/authentication.page.html
@@ -40,7 +40,7 @@
           </ion-item>
           <ion-item>
             <ion-label>Password: </ion-label>
-            <ion-input type="text" name="pass" id="pass"></ion-input>
+            <ion-input type="password" name="pass" id="pass"></ion-input>
           </ion-item>
           <ion-button type="submit"><ion-label>Submit</ion-label></ion-button>
         </form>
